force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Max_Border_Thickness_Left_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>B2B_Max_Border_Thickness_Left_Adjusted__c</fullName>
    <description>This field is used to store value of lens thickness at border maximum of left lens obtained from Schneider callout</description>
    <label>Max Border Thickness Left Lens Adjusted</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>