force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Measurement_System__c.field-meta.xml
<CustomField>
    <fullName>B2B_Measurement_System__c</fullName>
    <label>Measurement System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boxing System</fullName>
            </value>
            <value>
                <fullName>Measurement Line System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>