force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Min_thickness_border_Right_Lens__c.field-meta.xml
<CustomField>
    <fullName>B2B_Min_thickness_border_Right_Lens__c</fullName>
    <description>This field is used to store value of lens thickness at border minimum of right lens obtained from Schneider callout</description>
    <label>Min thickness border Right Lens</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>