force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Note__c.field-meta.xml
<CustomField>
    <fullName>B2B_Note__c</fullName>
    <label>Note</label>
    <type>TextArea</type>
</CustomField>