force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_OMA__c.field-meta.xml
<CustomField>
    <fullName>B2B_OMA__c</fullName>
    <description>This field is used to store the OMA obtained from OMA callout</description>
    <label>OMA</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>