force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Oma_Shape_Key__c.field-meta.xml
<CustomField>
    <fullName>B2B_Oma_Shape_Key__c</fullName>
    <description>Unique key of the selected lens shape</description>
    <label>OMA Shape Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>