force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Optimized_Facet_Cut__c.field-meta.xml
<CustomField>
    <fullName>B2B_Optimized_Facet_Cut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optimized Facet Cut</label>
    <type>Checkbox</type>
</CustomField>