force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Order__c.field-meta.xml
<CustomField>
    <fullName>B2B_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>B2B Lens Configurator</relationshipLabel>
    <relationshipName>B2B_Lens_Configurator</relationshipName>
    <type>Lookup</type>
</CustomField>