force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>B2B_Order_Type__c</fullName>
    <description>order type selected by the user</description>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete Eyewear</fullName>
            </value>
            <value>
                <fullName>Lens Only</fullName>
            </value>
            <value>
                <fullName>Lens Only + frame provided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>