force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Original_allowedScaling__c.field-meta.xml
<CustomField>
    <fullName>B2B_Original_allowedScaling__c</fullName>
    <description>This field will have the original allowed scaling value.</description>
    <label>Original allowedScaling</label>
    <length>24000</length>
    <type>LongTextArea</type>
</CustomField>