force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Original_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>B2B_Original_Coordinates__c</fullName>
    <description>This field will have the original coordinates from the oma callout response.</description>
    <label>Original Coordinates</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>