force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Original_Drills__c.field-meta.xml
<CustomField>
    <fullName>B2B_Original_Drills__c</fullName>
    <description>This field will have the original drills.</description>
    <label>Original Drills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>