force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Original_has_Drills__c.field-meta.xml
<CustomField>
    <fullName>B2B_Original_has_Drills__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Field will have the original has drills value.</description>
    <label>Original has Drills</label>
    <type>Checkbox</type>
</CustomField>