force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Original_OMA__c.field-meta.xml
<CustomField>
    <fullName>B2B_Original_OMA__c</fullName>
    <label>Original OMA</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>