force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Original_OMA_Height__c.field-meta.xml
<CustomField>
    <fullName>B2B_Original_OMA_Height__c</fullName>
    <description>This field will have the original oma height.</description>
    <label>Original OMA Height</label>
    <length>25</length>
    <type>Text</type>
</CustomField>