force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Original_Vision_Zone_Analysis__c.field-meta.xml
<CustomField>
    <fullName>B2B_Original_Vision_Zone_Analysis__c</fullName>
    <description>This field store the result from the callout to get the status of the Vision Zone Analysis.</description>
    <label>Original Vision Zone Analysis</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>