force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Original_Width__c.field-meta.xml
<CustomField>
    <fullName>B2B_Original_Width__c</fullName>
    <description>This field will have the original Oma width</description>
    <label>Original Width</label>
    <length>25</length>
    <type>Text</type>
</CustomField>