force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Pantoscopic_tilt__c.field-meta.xml
<CustomField>
    <fullName>B2B_Pantoscopic_tilt__c</fullName>
    <label>Pantoscopic tilt</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>