force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_PB1Placement_Right__c.field-meta.xml
<CustomField>
    <fullName>B2B_PB1Placement_Right__c</fullName>
    <label>Prism base 1 Placement - Right Eye</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In</fullName>
                <label>In (0°)</label>
            </value>
            <value>
                <fullName>Out</fullName>
                <label>Out (180°)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>