force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_PB2Placement_Left__c.field-meta.xml
<CustomField>
    <fullName>B2B_PB2Placement_Left__c</fullName>
    <label>Prism base 2 Placement -Left Eye</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Up</fullName>
                <label>Up (90°)</label>
            </value>
            <value>
                <fullName>Down</fullName>
                <label>Down (270°)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>