force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Photo_Sensation__c.field-meta.xml
<CustomField>
    <fullName>B2B_Photo_Sensation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will store Photo Sensation Product related to Lens Product</description>
    <label>Photo Sensation</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>B2B Lens Configurator (Photo Sensation)</relationshipLabel>
    <relationshipName>B2B_Lens_Configurator1</relationshipName>
    <type>Lookup</type>
</CustomField>