force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Prism_1_Left__c.field-meta.xml
<CustomField>
    <fullName>B2B_Prism_1_Left__c</fullName>
    <label>Prism 1 - Left Eye</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>