force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Progression_Length__c.field-meta.xml
<CustomField>
    <fullName>B2B_Progression_Length__c</fullName>
    <description>Progression length of the lens</description>
    <label>Progression Length</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>