force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Pupil_Distance_Left_Eye__c.field-meta.xml
<CustomField>
    <fullName>B2B_Pupil_Distance_Left_Eye__c</fullName>
    <label>Pupil Distance - Left Eye</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>