force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Related_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>B2B_Related_Order_Number__c</fullName>
    <description>this will be populated when reorder of the VS/RX order happens</description>
    <label>Related Order Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>