force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Remove_Drills__c.field-meta.xml
<CustomField>
    <fullName>B2B_Remove_Drills__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Schneider call parameter removeDrills will be mapped to this field. Send false for RX</description>
    <label>Remove Drills</label>
    <type>Checkbox</type>
</CustomField>