force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Remove_Groove__c.field-meta.xml
<CustomField>
    <fullName>B2B_Remove_Groove__c</fullName>
    <defaultValue>false</defaultValue>
    <label>remove groove</label>
    <type>Checkbox</type>
</CustomField>