force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_RX_Picture_Link__c.field-meta.xml
<CustomField>
    <fullName>B2B_RX_Picture_Link__c</fullName>
    <description>This will store the product image for RX solution product when adapter is selected.</description>
    <label>RX Picture Link</label>
    <length>100</length>
    <type>Text</type>
</CustomField>