force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_RX_Solution__c.field-meta.xml
<CustomField>
    <fullName>B2B_RX_Solution__c</fullName>
    <description>The RX Solution selected by the user</description>
    <label>RX Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Glazing</fullName>
            </value>
            <value>
                <fullName>Clip-in</fullName>
            </value>
            <value>
                <fullName>Adapter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>