force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_RX_Solution_Description__c.field-meta.xml
<CustomField>
    <fullName>B2B_RX_Solution_Description__c</fullName>
    <description>Selected RX solution product description</description>
    <label>RX Solution Description</label>
    <type>TextArea</type>
</CustomField>