force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_S_Graving__c.field-meta.xml
<CustomField>
    <fullName>B2B_S_Graving__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will store if the S Graving product is selected or not.</description>
    <label>S Graving</label>
    <type>Checkbox</type>
</CustomField>