force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Salesconcept__c.field-meta.xml
<CustomField>
    <fullName>B2B_Salesconcept__c</fullName>
    <description>This field is used to store sales concept of selected frame</description>
    <label>Salesconcept</label>
    <length>255</length>
    <type>Text</type>
</CustomField>