force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Schneider_SKU__c.field-meta.xml
<CustomField>
    <fullName>B2B_Schneider_SKU__c</fullName>
    <description
    >This field is used to store Schneider SKU of selected Lens product that is needed to be mapped with glassProduct attribute fo performing Schneider callout</description>
    <label>Schneider SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>