force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Selected_Accent_Ring__c.field-meta.xml
<CustomField>
    <fullName>B2B_Selected_Accent_Ring__c</fullName>
    <description>SKU of the Accent Ring</description>
    <label>Selected Accent Ring SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>