force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Selected_Accent_Ring_Image__c.field-meta.xml
<CustomField>
    <fullName>B2B_Selected_Accent_Ring_Image__c</fullName>
    <description>This field is used to store the image of the selected accent ring.</description>
    <label>Selected Accent Ring Image</label>
    <type>Url</type>
</CustomField>