force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Selected_Accent_Ring_Product__c.field-meta.xml
<CustomField>
    <fullName>B2B_Selected_Accent_Ring_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a lookup to product2 object which is used to save accent ring product.</description>
    <label>Selected Accent Ring Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>B2B Lens Configurator</relationshipLabel>
    <relationshipName>B2B_Lens_Configurator</relationshipName>
    <type>Lookup</type>
</CustomField>