force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Selected_Color_Groove_Product__c.field-meta.xml
<CustomField>
    <fullName>B2B_Selected_Color_Groove_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will have the product id of the selected color groove product from shape selection screen.</description>
    <label>Selected Color Groove Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>B2B Lens Configurator (Selected Color Groove Color  Product)</relationshipLabel>
    <relationshipName>B2B_Lens_Configurator_Color_Groove</relationshipName>
    <type>Lookup</type>
</CustomField>