force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Selected_Frame__c.field-meta.xml
<CustomField>
    <fullName>B2B_Selected_Frame__c</fullName>
    <description>SKU of the selected frame</description>
    <label>Selected Frame SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>