force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Selected_RX_Solution_Color__c.field-meta.xml
<CustomField>
    <fullName>B2B_Selected_RX_Solution_Color__c</fullName>
    <description>The product description of selected RX Solution</description>
    <label>Selected RX Solution Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>