force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Selected_RX_Solution_SKU__c.field-meta.xml
<CustomField>
    <fullName>B2B_Selected_RX_Solution_SKU__c</fullName>
    <description>The SKU of the selected RX Solution</description>
    <label>Selected RX Solution SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>