force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_SF__c.field-meta.xml
<CustomField>
    <fullName>B2B_SF__c</fullName>
    <description>In all directions (-9 to 9)</description>
    <label>SF</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>