force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Show_All_Shapes__c.field-meta.xml
<CustomField>
    <fullName>B2B_Show_All_Shapes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will hold the value which determines if the user wants to see all the shapes.</description>
    <label>Show All Shapes</label>
    <type>Checkbox</type>
</CustomField>