force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Special_Handling__c.field-meta.xml
<CustomField>
    <fullName>B2B_Special_Handling__c</fullName>
    <label>Special Handling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No selection</fullName>
            </value>
            <value>
                <fullName>2nd Pair Offer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>