force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Sphere_Left__c.field-meta.xml
<CustomField>
    <fullName>B2B_Sphere_Left__c</fullName>
    <label>Sphere - Left Eye</label>
    <length>255</length>
    <type>Text</type>
</CustomField>