force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Status__c.field-meta.xml
<CustomField>
    <fullName>B2B_Status__c</fullName>
    <description>Status of each configuration</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>In Cart</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>