force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Temple__c.field-meta.xml
<CustomField>
    <fullName>B2B_Temple__c</fullName>
    <label>Temple</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>140</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>