force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Type__c.field-meta.xml
<CustomField>
    <fullName>B2B_Type__c</fullName>
    <description>This field is used to indicate the applicable brand. Applicable Values: Vision Sensation/RX Glazing</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vision Sensation</fullName>
            </value>
            <value>
                <fullName>RX Glazing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>