force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Variant_Shape__c.field-meta.xml
<CustomField>
    <fullName>B2B_Variant_Shape__c</fullName>
    <description>Schneider call parameter shapeId will be mapped to this field</description>
    <label>Variant Shape</label>
    <length>255</length>
    <type>Text</type>
</CustomField>