force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Vision_Zone_Analysis_Code__c.field-meta.xml
<CustomField>
    <fullName>B2B_Vision_Zone_Analysis_Code__c</fullName>
    <description>This field stores the Id fetched from the callout to get the vision zone analysis id for vision zone analysis survey.</description>
    <label>Vision Zone Analysis Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>