force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Vision_Zone_Analysis_Result__c.field-meta.xml
<CustomField>
    <fullName>B2B_Vision_Zone_Analysis_Result__c</fullName>
    <description>This field store the value that needs to be passed to “visionzoneanalysis“ attribute of schneider callout request.</description>
    <label>Vision Zone Analysis Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>