force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Width__c.field-meta.xml
<CustomField>
    <fullName>B2B_Width__c</fullName>
    <description>This field is used to store the &apos;Width&apos; obtained from OMA callout</description>
    <label>Width</label>
    <length>25</length>
    <type>Text</type>
</CustomField>