force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_With_Color_Groove__c.field-meta.xml
<CustomField>
    <fullName>B2B_With_Color_Groove__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to save the user selection from shape selection screen  for with color groove.</description>
    <label>With Color Groove</label>
    <type>Checkbox</type>
</CustomField>