force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_With_Partial_Color_Groove__c.field-meta.xml
<CustomField>
    <fullName>B2B_With_Partial_Color_Groove__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field store if the user has selected any partial color groove.</description>
    <label>With Partial Color Groove</label>
    <type>Checkbox</type>
</CustomField>