force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Working_Distance__c.field-meta.xml
<CustomField>
    <fullName>B2B_Working_Distance__c</fullName>
    <description>Schneider call parameter  &apos;le&apos; will be mapped to this field</description>
    <label>Working Distance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>