force-app/main/default/objects/B2B_Lens_Configurator__c/fields/Lens_Product__c.field-meta.xml
<CustomField>
    <fullName>Lens_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the lookup field for lens product</description>
    <label>Lens Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>B2B Lens Configurator (Lens Product)</relationshipLabel>
    <relationshipName>B2B_Lens_Configurator3</relationshipName>
    <type>Lookup</type>
</CustomField>